Add new version of RR paper

--- a/dl/calhoun-cv.tex
+++ b/dl/calhoun-cv.tex
@@ -107,14 +107,15 @@ Dissertation title: \textit{Limit theory for overfit models}
   estimation windows. Revise and resubmit at \textit{Econometrica}
 \item Improved stepdown methods for asymptotic control of generalized
   error rates. Revise and resubmit at \textit{Journal of Econometrics}
-\item Out-of-sample comparisons of overfit models. Iowa State
-  University Working Paper 11002. Revise and resubmit at
+\item Out-of-sample comparisons of overfit models. Iowa State University Economics Department
+  Working Paper 11002. Revise and resubmit at
   \textit{Quantitative Economics}
-\item Block bootstrap consistency under weak assumptions. Iowa State
-  University Working Paper 11017. Revise and resubmit at
+\item Block bootstrap consistency under weak assumptions.
+  Iowa State University Economics Department Working Paper 11017. Revise and resubmit at
   \textit{Econometric Theory}
 \item A graphical analysis of causality in the Reinhart-Rogoff
-  dataset. Submitted to \textit{Contemporary Economic Policy}
+  dataset. Iowa State University Economics Department Working Paper 15014. Submitted to
+  \textit{Applied Economics Research Bulletin}
 \end{itemize}
 
 \subsection*{Manuscripts in preparation}
