Add NSF workshop to CV

--- a/dl/calhoun-cv.tex
+++ b/dl/calhoun-cv.tex
@@ -136,6 +136,10 @@ Dissertation title: \textit{Limit theory for overfit models}
 \section*{Grants and fellowships}
 
 \begin{description}
+% Submitted, not necessarily funded
+% \item[2016\,--\,2021] \allcaps{NSF} 1555132, ``\allcaps{CAREER}: A
+% unified approach to real-time inference and model evaluation in the
+% presence of data-snooping,'' (\$408,709)
 \item[2015] \allcaps{NSF} 1541790, ``\allcaps{FEW}: Coupling
   Economic Models with Agronomic, Hydrologic, and Bioenergy Models for
   Sustainable Food, Energy, and Water Systems,'' Co-\allcaps{PI} with
@@ -143,6 +147,9 @@ Dissertation title: \textit{Limit theory for overfit models}
 \item[2012] Iowa State University Strategic Initiative, ``Graphical
   Processing Units (\allcaps{GPU}) for Parallel Computing,'' with
   Helle Bunzel, Jarad Niemi, and Mervyn Marasinghe (\$87,727.39)
+% \item[2012\,--\,2014] \allcaps{NSF} 1227477, ``Cross-validation as
+% a tool for inference under instability,'' Co-\allcaps{PI} with
+% Helle Bunzel (\$195,894) % Declined, obvs.
 \end{description}
 
 \section*{External presentations}
@@ -217,6 +224,14 @@ Deung-Yong Heo, PhD Economics
 \end{description}
 
 \section*{Professional service}
+
+\subsection*{Conference organization}
+\begin{description}
+\item[2015] \allcaps{NSF} workshop, ``Coupling Economic Models with
+Agronomic, Hydrologic, and Bioenergy Models for Sustainable Food,
+Energy, and Water Systems.''  Ames, Iowa, 10/12--10/13. Organizing
+committee
+\end{description}
 
 \subsection*{Journal and handbook referee}
 \textit{American Journal of Agricultural Economics;
