Move RR paper out of 'in submission' category on CV

--- a/dl/calhoun-cv.tex
+++ b/dl/calhoun-cv.tex
@@ -103,27 +103,29 @@ Dissertation title: \textit{Limit theory for overfit models}
 \subsection*{Manuscripts in submission}
 
 \begin{itemize}
-\item An asymptotically normal out-of-sample test based on mixed
-  estimation windows. Revise and resubmit at \textit{Econometrica}
 \item Improved stepdown methods for asymptotic control of generalized
-  error rates. Revise and resubmit at \textit{Journal of Econometrics}
-\item Out-of-sample comparisons of overfit models. Iowa State University Economics Department
-  Working Paper 11002. Revise and resubmit at
-  \textit{Quantitative Economics}
-\item Block bootstrap consistency under weak assumptions.
-  Iowa State University Economics Department Working Paper 11017. Revise and resubmit at
-  \textit{Econometric Theory}
-\item A graphical analysis of causality in the Reinhart-Rogoff
-  dataset. Iowa State University Economics Department Working Paper 15014. Submitted to
-  \textit{Applied Economics Research Bulletin}
+error rates, April 2015. Revise and resubmit at \textit{Journal of
+Econometrics}
+\item An asymptotically normal out-of-sample test based on mixed
+estimation windows, January 2015. Revise and resubmit at
+\textit{Econometrica}
+\item Block bootstrap consistency under weak assumptions, October
+2014.  Iowa State University Economics Department Working Paper
+11017. Revise and resubmit at \textit{Econometric Theory}
+\item Out-of-sample comparisons of overfit models, March 2014. Iowa
+State University Economics Department Working Paper 11002. Revise and
+resubmit at \textit{Quantitative Economics}
 \end{itemize}
 
-\subsection*{Manuscripts in preparation}
+\subsection*{Other unpublished manuscripts}
 \begin{itemize}
-\item Graphing better Impulse Response Functions for discrete-time
-  linear models (with Seth Pruitt)
+\item A graphical analysis of causality in the Reinhart-Rogoff
+dataset, July 2015. Iowa State University Economics Department Working
+Paper 15014
 \item A simple block bootstrap for asymptotically normal out-of-sample
-  test statistics
+test statistics, April 2015
+\item Graphing better Impulse Response Functions for discrete-time
+linear models (with Seth Pruitt), March 2015
 \end{itemize}
 
 \section*{Honors and awards}
