Add Zack Martin to CV

--- a/dl/calhoun-cv.tex
+++ b/dl/calhoun-cv.tex
@@ -209,18 +209,22 @@ International University
 
 \begin{description}
 \item[Current students:]
-Samantha Tyner, PhD Statistics;
-Carson Sievert, PhD Statistics;
 Yang He, PhD Economics;
-Ziran Li, PhD Economics;
-Soumnyadip Roy, PhD Economics;
 Zabid Iqbal, PhD Economics
-\item[2015] Xiying Liu, PhD Economics;
-Jessica Short, MS Statistics;
+Ziran Li, PhD Economics;
+Zachary Martin, PhD Economics;
+Soumnyadip Roy, PhD Economics;
+Carson Sievert, PhD Statistics;
+Samantha Tyner, PhD Statistics;
+\item[2015]
 Matthew Clancy, PhD Economics;
 Sam Helmich, MS Statistics;
 Deung-Yong Heo, PhD Economics
-\item[2013] Yihui Xie, PhD Statistics; Nathan Zimmerman, MS Statistics
+Xiying Liu, PhD Economics;
+Jessica Short, MS Statistics;
+\item[2013]
+Yihui Xie, PhD Statistics;
+Nathan Zimmerman, MS Statistics
 \item[2012] Jeremiah Richey, PhD Economics
 \item[2010] Ozgu Serttas, PhD Economics
 \end{description}
