--- a/dl/calhoun-cv.tex
+++ b/dl/calhoun-cv.tex
@@ -169,6 +169,7 @@ linear models (with Seth Pruitt), March 2015
 
 \subsection*{Other presentations}
 \begin{description}
+\item[2015] Annual Meetings of the Midwest Econometrics Group
 \item[2014] \allcaps{NBER} Summer Institute (Forecasting \& Empirical Methods in
   Macro \& Finance); Joint Statistical Meetings
 \item[2013] \allcaps{NBER}-\allcaps{NSF} Time Series Conference
