Remove spacing around dashes

--- a/dl/calhoun-cv.tex
+++ b/dl/calhoun-cv.tex
@@ -44,7 +44,7 @@
 \newcommand{\dfont}{\normalfont}
 \newlength\dgap
 \newlength\dwidth
-\settowidth{\dgap}{\dfont \,--\,}
+\settowidth{\dgap}{\dfont --}
 \settowidth{\dwidth}{\dfont 2000}
 \setenumerate{topsep=0pt,parsep=0pt,partopsep=0pt,leftmargin=0pt}
 \setitemize{topsep=0pt,parsep=0pt,partopsep=0pt,leftmargin=0pt,label={}}
@@ -88,7 +88,7 @@ Dissertation title: \textit{Limit theory for overfit models}
 \section*{Academic positions}
 
 \begin{description}
-\item[2009\,--\,present] Assistant Professor of Economics, Iowa State University
+\item[2009--present] Assistant Professor of Economics, Iowa State University
 \end{description}
 
 \section*{Publications}
@@ -139,7 +139,7 @@ linear models (with Seth Pruitt), March 2015
 
 \begin{description}
 % Submitted, not necessarily funded
-% \item[2016\,--\,2021] \allcaps{NSF} 1555132, ``\allcaps{CAREER}: A
+% \item[2016--2021] \allcaps{NSF} 1555132, ``\allcaps{CAREER}: A
 % unified approach to real-time inference and model evaluation in the
 % presence of data-snooping,'' (\$408,709)
 \item[2015] \allcaps{NSF} 1541790, ``\allcaps{FEW}: Coupling
@@ -149,7 +149,7 @@ linear models (with Seth Pruitt), March 2015
 \item[2012] Iowa State University Strategic Initiative, ``Graphical
   Processing Units (\allcaps{GPU}) for Parallel Computing,'' with
   Helle Bunzel, Jarad Niemi, and Mervyn Marasinghe (\$87,727.39)
-% \item[2012\,--\,2014] \allcaps{NSF} 1227477, ``Cross-validation as
+% \item[2012--2014] \allcaps{NSF} 1227477, ``Cross-validation as
 % a tool for inference under instability,'' Co-\allcaps{PI} with
 % Helle Bunzel (\$195,894) % Declined, obvs.
 \end{description}
@@ -190,9 +190,9 @@ linear models (with Seth Pruitt), March 2015
 
 \subsection*{Courses taught}
 \begin{description}[noitemsep]
-\item[2011\,--\,present] PhD Macroeconometrics
-\item[2010\,--\,present] Principles of Macroeconomics
-\item[2009\,--\,present] PhD Econometrics 1
+\item[2011--present] PhD Macroeconometrics
+\item[2010--present] Principles of Macroeconomics
+\item[2009--present] PhD Econometrics 1
 \item[2009\p] Undergraduate Econometrics 3 (taught at \allcaps{UCSD})
 \end{description}
 
@@ -255,17 +255,17 @@ Manchester School}
 
 \subsection*{University committees at Iowa State}
 \begin{description}[noitemsep]
-\item[2014\,--\,present] Faculty Representative Assembly Executive
+\item[2014--present] Faculty Representative Assembly Executive
 Committee
-\item[2013\,--\,present] Faculty Representative Assembly
+\item[2013--present] Faculty Representative Assembly
 \end{description}
 \subsection*{Departmental committees at Iowa State}
 \begin{description}[noitemsep]
-\item[2014\,--\,2015] Agricultural Economist Hiring Committee
-\item[2013\,--\,2014] Environmental and Resource Economist Hiring Committee
-\item[2012\,--\,2013] Computer Support Staff Hiring Committee
-\item[2009\,--\,2013] Graduate Student Admissions Committee
-\item[2009\,--\,2014] Computer Committee
+\item[2014--2015] Agricultural Economist Hiring Committee
+\item[2013--2014] Environmental and Resource Economist Hiring Committee
+\item[2012--2013] Computer Support Staff Hiring Committee
+\item[2009--2013] Graduate Student Admissions Committee
+\item[2009--2014] Computer Committee
 \end{description}
 
 \subsection*{Professional membership}
