--- a/dl/calhoun-cv.tex
+++ b/dl/calhoun-cv.tex
@@ -261,6 +261,7 @@ Committee
 \end{description}
 \subsection*{Departmental committees at Iowa State}
 \begin{description}[noitemsep]
+\item[2015--2016] Seminar Committee
 \item[2014--2015] Agricultural Economist Hiring Committee
 \item[2013--2014] Environmental and Resource Economist Hiring Committee
 \item[2012--2013] Computer Support Staff Hiring Committee
