--- a/dl/calhoun-cv.tex
+++ b/dl/calhoun-cv.tex
@@ -26,7 +26,7 @@
 \RaggedRight
 \urlstyle{same} %<- Do not monospace urls.
 \newcommand{\allcaps}[1]{\textls{\MakeUppercase{#1}}}
-\newcommand{\smallcaps}[1]{\textsc{\textls{\MakeLowercase{#1}}}}
+\newcommand{\smallcaps}[1]{\textsc{\MakeLowercase{#1}}}
 
 % Set spacing and size of sections and subsections. (Don't use
 % anything below subsection.)
@@ -121,7 +121,7 @@ resubmit at \textit{Quantitative Economics}
 \begin{itemize}
 \item A graphical analysis of causality in the Reinhart-Rogoff
 dataset, July 2015. Iowa State University Economics Department Working
-Paper 15014
+Paper \#15014
 \item A simple block bootstrap for asymptotically normal out-of-sample
 test statistics, April 2015
 \item Graphing better Impulse Response Functions for discrete-time
@@ -199,9 +199,9 @@ linear models (with Seth Pruitt), March 2015
 \subsection*{Graduate student advisor, students listed with year of graduation}
 \begin{description}
 \item[2015] Matt Simpson, PhD Economics and Statistics.  Co-advisor
-with Jarad Niemi. \\
-Placement: Post-Doctoral Researcher in Statistics at University of Missouri.
-\item[2015] Anwen Yin, PhD Economics. Co-advisor with Helle Bunzel. \\
+with Jarad Niemi.\\
+Placement: Post-Doctoral Researcher in Statistics at University of Missouri
+\item[2015] Anwen Yin, PhD Economics. Co-advisor with Helle Bunzel.
 Placement: Assistant Professor of Economics at Texas \textls{A\&M}
 International University
 \end{description}
@@ -216,13 +216,13 @@ Ziran Li, PhD Economics;
 Zachary Martin, PhD Economics;
 Soumnyadip Roy, PhD Economics;
 Carson Sievert, PhD Statistics;
-Samantha Tyner, PhD Statistics;
+Samantha Tyner, PhD Statistics
 \item[2015]
 Matthew Clancy, PhD Economics;
 Sam Helmich, MS Statistics;
 Deung-Yong Heo, PhD Economics
 Xiying Liu, PhD Economics;
-Jessica Short, MS Statistics;
+Jessica Short, MS Statistics
 \item[2013]
 Yihui Xie, PhD Statistics;
 Nathan Zimmerman, MS Statistics
@@ -241,17 +241,17 @@ committee
 \end{description}
 
 \subsection*{Journal and handbook referee}
-\textit{American Journal of Agricultural Economics;
-Bernoulli;
-Communications in Statistics\,---\,Theory and Methods;
-Computational Statistics and Data Analysis;
-Econometrica;
-Economics Bulletin;
-Handbook of Economic Forecasting, volume 2;
-International Journal of Forecasting;
-Journal of Business \& Economic Statistics;
-Journal of Money, Credit \& Banking;
-Manchester School}
+\textit{American Journal of Agricultural Economics;}
+\textit{Bernoulli;}
+\textit{Communications in Statistics ---\,Theory and Methods;}
+\textit{Computational Statistics and Data Analysis;}
+\textit{Econometrica;}
+\textit{Economics Bulletin;}
+\textit{Handbook of Economic Forecasting, volume 2;}
+\textit{International Journal of Forecasting;}
+\textit{Journal of Business \& Economic Statistics;}
+\textit{Journal of Money, Credit \& Banking;}
+\textit{Manchester School}
 
 \subsection*{University committees at Iowa State}
 \begin{description}[noitemsep]
@@ -261,7 +261,7 @@ Committee
 \end{description}
 \subsection*{Departmental committees at Iowa State}
 \begin{description}[noitemsep]
-\item[2015--2016] Seminar Committee
+\item[2015--present] Seminar Committee
 \item[2014--2015] Agricultural Economist Hiring Committee
 \item[2013--2014] Environmental and Resource Economist Hiring Committee
 \item[2012--2013] Computer Support Staff Hiring Committee
@@ -270,8 +270,9 @@ Committee
 \end{description}
 
 \subsection*{Professional membership}
-American Economic Association, American Statistical Association,
-Econometric Society, Institute of Mathematical Statistics, Midwest
-Economics Association
+American Economic Association,
+American Statistical Association,
+Econometric Society,
+Institute of Mathematical Statistics
 
 \end{document}
