Add Kevin Duncan as advisee

--- a/dl/calhoun-cv.tex
+++ b/dl/calhoun-cv.tex
@@ -198,6 +198,7 @@ linear models (with Seth Pruitt), March 2015
 
 \subsection*{Graduate student advisor, students listed with year of graduation}
 \begin{description}
+\item[Current student:] Kevin Duncan, PhD Economics
 \item[2015] Matt Simpson, PhD Economics and Statistics.  Co-advisor
 with Jarad Niemi.\\
 Placement: Post-Doctoral Researcher in Statistics at University of Missouri
