Tweak Cathy's name on CV

--- a/dl/calhoun-cv.tex
+++ b/dl/calhoun-cv.tex
@@ -145,7 +145,7 @@ linear models (with Seth Pruitt), March 2015
 \item[2015] \allcaps{NSF} 1541790, ``\allcaps{FEW}: Coupling
   Economic Models with Agronomic, Hydrologic, and Bioenergy Models for
   Sustainable Food, Energy, and Water Systems,'' Co-\allcaps{PI} with
-  Cathy Kling, Raymond Arritt, and David Keiser (\$45,922)
+  Catherine Kling, Raymond Arritt, and David Keiser (\$45,922)
 \item[2012] Iowa State University Strategic Initiative, ``Graphical
   Processing Units (\allcaps{GPU}) for Parallel Computing,'' with
   Helle Bunzel, Jarad Niemi, and Mervyn Marasinghe (\$87,727.39)
