Update CV with FEW conference presentation
This commit adds my panelist presentation at the FEW conference on
10/12 to my CV.

--- a/dl/calhoun-cv.tex
+++ b/dl/calhoun-cv.tex
@@ -169,7 +169,10 @@ linear models (with Seth Pruitt), March 2015
 
 \subsection*{Other presentations}
 \begin{description}
-\item[2015] Annual Meetings of the Midwest Econometrics Group
+\item[2015] Annual Meetings of the Midwest Econometrics Group;
+  \allcaps{NSF} workshop, ``Coupling Economic Models with Agronomic,
+  Hydrologic, and Bioenergy Models for Sustainable Food, Energy, and
+  Water Systems'' (panelist) % (10/12)
 \item[2014] \allcaps{NBER} Summer Institute (Forecasting \& Empirical Methods in
   Macro \& Finance); Joint Statistical Meetings
 \item[2013] \allcaps{NBER}-\allcaps{NSF} Time Series Conference
