Save date of MEG presentation on CV
This commit stores the date of my MEG presentation as a comment on
my CV. Eventually I plan to add dates to all of these presentations
and this ensures that I won't forget it.

--- a/dl/calhoun-cv.tex
+++ b/dl/calhoun-cv.tex
@@ -169,7 +169,7 @@ linear models (with Seth Pruitt), March 2015
 
 \subsection*{Other presentations}
 \begin{description}
-\item[2015] Annual Meetings of the Midwest Econometrics Group;
+\item[2015] Annual Meetings of the Midwest Econometrics Group; %(10/10)
   \allcaps{NSF} workshop, ``Coupling Economic Models with Agronomic,
   Hydrologic, and Bioenergy Models for Sustainable Food, Energy, and
   Water Systems'' (panelist) % (10/12)
