Add RD bootstrap paper to CV

--- a/dl/calhoun-cv.tex
+++ b/dl/calhoun-cv.tex
@@ -115,6 +115,9 @@ estimation windows, January 2015. Revise and resubmit at
 \item Out-of-sample comparisons of overfit models, March 2014. Iowa
 State University Economics Department Working Paper 11002. Revise and
 resubmit at \textit{Quantitative Economics}
+\item Bootstrap Confidence Intervals for Sharp Regression
+Discontinuity Designs with the Uniform Kernel (with Ot\'avio Bartalotti
+and Yang He), March 2016. Submitted to \textit{Advances in Econometrics}
 \end{itemize}
 
 \subsection*{Other unpublished manuscripts}
