Add FEW whitepaper to CV and webpage

--- a/dl/calhoun-cv.tex
+++ b/dl/calhoun-cv.tex
@@ -120,15 +120,31 @@ Discontinuity Designs with the Uniform Kernel (with Ot\'avio Bartalotti
 and Yang He), March 2016. Submitted to \textit{Advances in Econometrics}
 \end{itemize}
 
-\subsection*{Other unpublished manuscripts}
+\subsection*{Manuscripts in preparation}
 \begin{itemize}
-\item A graphical analysis of causality in the Reinhart-Rogoff
-dataset, July 2015. Iowa State University Economics Department Working
-Paper \#15014
 \item A simple block bootstrap for asymptotically normal out-of-sample
-test statistics, April 2015
+  test statistics, April 2015
 \item Graphing better Impulse Response Functions for discrete-time
-linear models (with Seth Pruitt), March 2015
+  linear models (with Seth Pruitt), March 2015
+\end{itemize}
+
+\subsection*{Other working papers}
+\begin{itemize}
+\item Research Needs and Challenges in the FEW System: Coupling
+  Economic Models with Agronomic, Hydrologic, and Bioenergy Models for
+  Sustainable Food, Energy, and Water Systems (with Catherine L.\
+  Kling, Raymond W.\ Arritt, David A.\ Keiser, John M.\
+  Antle, Jeffery G.\ Arnold, Miguel Carriquiry, Indrajeet Chaubey,
+  Peter Christensen, Baskar Ganapathysubramanian, Philip Gassman,
+  William Gutowski, Thomas W.\ Hertel, Gerrit Hoogenboom, Elena Irwin,
+  Madhu Khanna, Pierre M\'erel, Daniel J.\ Phaneuf, Andrew Plantinga,
+  Stephen Polasky, Paul Preckel, Sergey Rabotyagov, Ivan Rudik, Silvia
+  Secchi, Aaron Smith, Andrew Vanloocke, Calvin Wolter, Jinhua Zhao,
+  and Wendong Zhang), March 2016. CARD Working Paper \#563.
+
+\item A graphical analysis of causality in the Reinhart-Rogoff
+  dataset, July 2015. Iowa State University Economics Department
+  Working Paper \#15014
 \end{itemize}
 
 \section*{Honors and awards}
