Move bootstrap RD paper to 'published'

--- a/dl/calhoun-cv.tex
+++ b/dl/calhoun-cv.tex
@@ -92,9 +92,12 @@ Dissertation title: \textit{Limit theory for overfit models}
 \end{description}
 
 \section*{Publications}
-\subsection*{Refereed journal articles}
+\subsection*{Refereed articles}
 
 \begin{itemize}
+\item Bootstrap Confidence Intervals for Sharp Regression
+Discontinuity Designs with the Uniform Kernel (with Ot\'avio Bartalotti
+and Yang He). \textit{Advances in Econometrics}, 38, October 2016
 \item Hypothesis testing for linear regression when
 \textit{k}/\textit{n} is large. \textit{Journal of Econometrics},
 165(2):163--174, 2011
@@ -115,9 +118,6 @@ estimation windows, January 2015. Revise and resubmit at
 \item Out-of-sample comparisons of overfit models, March 2014. Iowa
 State University Economics Department Working Paper 11002. Revise and
 resubmit at \textit{Quantitative Economics}
-\item Bootstrap Confidence Intervals for Sharp Regression
-Discontinuity Designs with the Uniform Kernel (with Ot\'avio Bartalotti
-and Yang He), March 2016. Submitted to \textit{Advances in Econometrics}
 \end{itemize}
 
 \subsection*{Manuscripts in preparation}
