Fix minor typo: missing semicolon

--- a/dl/calhoun-cv.tex
+++ b/dl/calhoun-cv.tex
@@ -234,7 +234,7 @@ International University
 \begin{description}
 \item[Current students:]
 Yang He, PhD Economics;
-Zabid Iqbal, PhD Economics
+Zabid Iqbal, PhD Economics;
 Ziran Li, PhD Economics;
 Zachary Martin, PhD Economics;
 Soumnyadip Roy, PhD Economics;
