Update service section of CV
- Add LAS Computer Advisory Committee
- Add 'LAS' in front of Faculty Representative sections
- Change headings from 'University' to 'College and University'

--- a/dl/calhoun-cv.tex
+++ b/dl/calhoun-cv.tex
@@ -276,11 +276,12 @@ committee
 \textit{Journal of Money, Credit \& Banking;}
 \textit{Manchester School}
 
-\subsection*{University committees at Iowa State}
+\subsection*{College and university committees at Iowa State}
 \begin{description}[noitemsep]
-\item[2014--present] Faculty Representative Assembly Executive
-Committee
-\item[2013--present] Faculty Representative Assembly
+\item[2015--present] LAS Computer Advisory Committee
+\item[2014--present] LAS Faculty Representative Assembly Executive
+  Committee
+\item[2013--present] LAS Faculty Representative Assembly
 \end{description}
 \subsection*{Departmental committees at Iowa State}
 \begin{description}[noitemsep]
