Fix typo -- add missing semicolon

--- a/dl/calhoun-cv.tex
+++ b/dl/calhoun-cv.tex
@@ -243,7 +243,7 @@ Samantha Tyner, PhD Statistics
 \item[2015]
 Matthew Clancy, PhD Economics;
 Sam Helmich, MS Statistics;
-Deung-Yong Heo, PhD Economics
+Deung-Yong Heo, PhD Economics;
 Xiying Liu, PhD Economics;
 Jessica Short, MS Statistics
 \item[2013]
