--- a/dl/calhoun-cv.tex
+++ b/dl/calhoun-cv.tex
@@ -106,6 +106,9 @@ and Yang He). \textit{Advances in Econometrics}, 38, October 2016
 \subsection*{Manuscripts in submission}
 
 \begin{itemize}
+\item A method for smoothing Impulse Response Functions for
+  discrete-time linear models, March 2016. Submitted to
+  \textit{The American Economic Review}.
 \item Improved stepdown methods for asymptotic control of generalized
 error rates, April 2015. Revise and resubmit at \textit{Journal of
 Econometrics}
@@ -124,8 +127,6 @@ resubmit at \textit{Quantitative Economics}
 \begin{itemize}
 \item A simple block bootstrap for asymptotically normal out-of-sample
   test statistics, April 2015
-\item Graphing better Impulse Response Functions for discrete-time
-  linear models (with Seth Pruitt), March 2015
 \end{itemize}
 
 \subsection*{Other working papers}
