Update submission status of IRF paper
The paper was rejected by AER and I've submitted it to REStat.
My CV now reflects that change.

--- a/dl/calhoun-cv.tex
+++ b/dl/calhoun-cv.tex
@@ -108,7 +108,7 @@ and Yang He). \textit{Advances in Econometrics}, 38, October 2016
 \begin{itemize}
 \item A method for smoothing Impulse Response Functions for
   discrete-time linear models, March 2016. Submitted to
-  \textit{The American Economic Review}.
+  \textit{Review of Economics and Statistics}.
 \item Improved stepdown methods for asymptotic control of generalized
 error rates, April 2015. Revise and resubmit at \textit{Journal of
 Econometrics}
