Add 'Vice chair of representative assembly' to university service on CV

--- a/dl/calhoun-cv.tex
+++ b/dl/calhoun-cv.tex
@@ -279,6 +279,7 @@ committee
 
 \subsection*{College and university committees at Iowa State}
 \begin{description}[noitemsep]
+\item[2016--present] LAS Faculty Representative Assembly Vice Chair
 \item[2015--present] LAS Computer Advisory Committee
 \item[2014--present] LAS Faculty Representative Assembly Executive
   Committee
