Add small tweaks for AucTeX on desktop

--- a/dl/calhoun-cv.tex
+++ b/dl/calhoun-cv.tex
@@ -302,3 +302,8 @@ Econometric Society,
 Institute of Mathematical Statistics
 
 \end{document}
+
+%%% Local Variables:
+%%% mode: latex
+%%% TeX-master: t
+%%% End:
