Move Soumnyadip Roy to list of 'graduated' phd students

--- a/dl/calhoun-cv.tex
+++ b/dl/calhoun-cv.tex
@@ -238,9 +238,10 @@ Yang He, PhD Economics;
 Zabid Iqbal, PhD Economics;
 Ziran Li, PhD Economics;
 Zachary Martin, PhD Economics;
-Soumnyadip Roy, PhD Economics;
 Carson Sievert, PhD Statistics;
 Samantha Tyner, PhD Statistics
+\item[2016]
+Soumnyadip Roy, PhD Economics
 \item[2015]
 Matthew Clancy, PhD Economics;
 Sam Helmich, MS Statistics;
