Add 'advances in econometrics' confernce to cv

--- a/dl/calhoun-cv.tex
+++ b/dl/calhoun-cv.tex
@@ -189,12 +189,14 @@ resubmit at \textit{Quantitative Economics}
 
 \subsection*{Other presentations}
 \begin{description}
+\item[2016] Advances in Econometrics Conference, Regression
+  Discontinuity Designs %(5/20)
 \item[2015] Annual Meetings of the Midwest Econometrics Group; %(10/10)
   \allcaps{NSF} workshop, ``Coupling Economic Models with Agronomic,
   Hydrologic, and Bioenergy Models for Sustainable Food, Energy, and
   Water Systems'' (panelist) % (10/12)
-\item[2014] \allcaps{NBER} Summer Institute (Forecasting \& Empirical Methods in
-  Macro \& Finance); Joint Statistical Meetings
+\item[2014] \allcaps{NBER} Summer Institute, Forecasting \& Empirical
+  Methods in Macro \& Finance; Joint Statistical Meetings
 \item[2013] \allcaps{NBER}-\allcaps{NSF} Time Series Conference
   (poster session); Annual Meetings of the Midwest Econometrics Group
 \item[2012] First Conference of the International Society for
